<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bienvenidos_a_mi_app_calculadora"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:src="@drawable/calculadora" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/introduzca_el_primer_numero"
            android:textSize="20dp"

            />

        <EditText
            android:id="@+id/PrimerNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introduce_el_primer_numero"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/introduzca_el_segundo_numero"
            android:textSize="20dp"

            />

        <EditText
            android:id="@+id/SegundoNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introduce_el_segundo_numero"
            android:inputType="number"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="+"

                android:textSize="25dp"

                />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="-"

                android:textSize="25sp" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="76dp"
                android:layout_height="wrap_content"

                android:layout_margin="6dp"
                android:text="X"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="/"
                android:textSize="25dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/Resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/el_resultado_es"
            android:textSize="20dp"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>