<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dog_meme"
        android:adjustViewBounds="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pregunta_ppal"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:padding="16dp"

        />
    <EditText
        android:id="@+id/edad_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introdu_edad"
        android:inputType="number"
        android:padding="16dp"

        />
    <TextView
        android:id="@+id/resultado_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/btn_calcular"
        />





</LinearLayout>