<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    tools:context="MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_calculadora"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/red"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView1"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_calculadora"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView1"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/Titlecalculadora"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_friends"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/yellow"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_amigos"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView2"
                            android:layout_centerHorizontal="true"
                            android:text="@string/TitleLista_de_amigos"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1">
                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_perrete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/lime"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView3"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_edad_canina"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView3"
                            android:layout_centerHorizontal="true"
                            android:text="@string/TitleEdad_canina"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_quizzes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/green"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView4"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_quizzes"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView4"
                            android:layout_centerHorizontal="true"
                            android:text="@string/TitleQuizzes"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_galeri"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/blue"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView5"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_gallery"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView5"
                            android:layout_centerHorizontal="true"
                            android:text="@string/TitleGaleria"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_mapas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/darkblue"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView6"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_mapas"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView6"
                            android:layout_centerHorizontal="true"
                            android:text="@string/TitleMapas"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_restaurantes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/darkviolet"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView7"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/restaurantes"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView7"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/TitleRestaurantes"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_Herramientas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/violet"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView8"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_herramientas"
                            android:layout_marginTop="5dp"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView8"
                            android:layout_centerHorizontal="true"
                            android:text="@string/TitleHerramientas"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_musica"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/Teal"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView9"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/musica"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView9"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="Musica"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:clickable="true"
                    android:id="@+id/rellay_baloncesto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/naranja"
                    android:foreground="?attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView10"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/baloncesto"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView10"
                            android:layout_centerHorizontal="true"
                            android:text="Baloncesto"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>